Added and commented out Strings from resource bundle

--- a/src/textForGui.properties
+++ b/src/textForGui.properties
@@ -15,3 +15,10 @@ PleaseInit=Please Initialize the Grid first
 SimOver=Simulation Over
 FinState=Final State
 ItsOver=This is the final state. Press Reset Button
+DEFAULT_FONT=Times New Roman
+BOUNDARY_TEXT=Choose Boundary Type
+SHAPE_TEXT=Choose Shape
+NUMBEROFSIMULATION_TEXT=# of Simulations
+InvalidError=Invalid File
+NotValid=This is not a valid file
+UploadValid=Please upload a valid XML configuration file
